fix: remove min-height for main content
This doesn't seems to play nice with the themed footer
creating overlap of content and footer.

--- a/src/components/layout/styles/Layout.scss
+++ b/src/components/layout/styles/Layout.scss
@@ -12,7 +12,6 @@
     display: flex;
     flex: 1;
     flex-direction: column;
-    min-height: 600px;
 }
 
 footer a img {
